--- a/biology/index.html
+++ b/biology/index.html
@@ -33,14 +33,14 @@
     <!--Other Navbar links for toggling-->
     <div class="collapse navbar-collapse navbar-right" id="navbar-main-menu">
       <ul class="nav navbar-nav">
-        <li class="home-btn"><a href="">Home</a><span class="sr-only"></span></li>
-        <li class="about-btn"><a href="#about">About</a></li>
+        <li class="home-btn"><a href="../">Home</a><span class="sr-only"></span></li>
+        <li class="about-btn"><a href="../#about">About</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Portfolio</a>
           <ul class="dropdown-menu">
-            <li><a href="#">English</a></li>
-            <li><a href="#">Math</a></li>
-            <li><a href="#">Biology</a></li>
+            <li><a href="../english/">English</a></li>
+            <li><a href="../math/">Math</a></li>
+            <li><a href="../biology/">Biology</a></li>
           </ul>
         </li>
         <li class="contact-btn"><a href="#contact">Contact</a></li>
